Removed Uneccesary comments

--- a/contact.html
+++ b/contact.html
@@ -243,11 +243,9 @@
         <script>
           function handleFormSubmission(event) {
             event.preventDefault();
-            // Assuming the form is valid and the message is sent successfully
-            // Perform any form validation or AJAX request here if needed
 
             // Redirect to home page
-            window.location.href = "index.html"; // Change this to your home page URL
+            window.location.href = "index.html";
           }
         </script>
       </section>
